--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
     <h1>Background Generator</h1>
+    <h2>added title</h2>
     <script type="text/javascript" src="script.js"></script>
 </body>
 
